clash-tracker/main/objects/Apex_Debug_Log__c/Apex_Debug_Log__c.object-meta.xml
<CustomObject>
    <description>A debugging object that stores success or failure information related to Apex classes and web service callouts.</description>
    <label>Apex Debug Log</label>
    <nameField>
        <label>Apex Debug Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apex Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>