clash-tracker/main/objects/Apex_Debug_Log__c/fields/Inbound_Message__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Message__c</fullName>
    <label>Inbound Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>