clash-tracker/main/objects/Apex_Debug_Log__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <label>Integration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>