clash-tracker/main/objects/Apex_Debug_Log__c/fields/Outbound_Message__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Message__c</fullName>
    <label>Outbound Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>